# capsule_tauri

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  design-qa.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: legacy-capsule-parity-audit.md
docs/superpowers/plans/: 2026-07-03-entry-numbers.md
docs/superpowers/specs/: 2026-07-03-entry-numbers-design.md
e2e/: app.spec.ts
scripts/: generate-release-manifest.mjs
src/: App.test.tsx  App.tsx  backend.test.ts  backend.ts  styles.css  types.ts
src-tauri/: Cargo.toml  mood_sentiment.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_chat.rs  ai_config.rs  ai_metadata.rs  ai_providers.rs  backup.rs  db.rs  debug.rs  entries.rs  images.rs  lib.rs  location.rs  main.rs  models.rs  mood_sentiment.rs  phase6.rs  search.rs  security.rs  settings.rs  stats.rs  sync.rs  threads.rs
src/components/: StatusPill.tsx  analytics.test.tsx  analytics.tsx  entries.test.tsx  entries.tsx  media.tsx  ui.test.tsx  ui.tsx  wrapped.tsx
src/components/retro/: RetroWriterShell.test.tsx  RetroWriterShell.tsx
src/lib/: analytics.test.ts  analytics.ts  calendar.test.ts  calendar.ts  changelog.test.ts  changelog.ts  format.test.ts  format.ts
src/lib/retro-focus/: customization.ts  styles.css  themeRenderers.tsx  themes.ts
src/test/: fixtures.ts
