[package]
name = "capsule-tauri"
version = "0.6.0"
description = "Capsule desktop app"
authors = ["Capsule"]
edition = "2021"

[lib]
name = "capsule_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rusqlite = { version = "0.37", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
