[package]
name = "capsule-tauri"
version = "0.16.0"
description = "Capsule desktop app"
authors = ["Capsule"]
edition = "2021"

[lib]
name = "capsule_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "native-tls-no-alpn"] }
rfd = "0.15"
rusqlite = { version = "0.37", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.10.1"
url = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2.4.1"
